[gd_scene load_steps=2 format=3 uid="uid://cui5xuolpro1o"]

[ext_resource type="Script" uid="uid://c6caw7j331fj3" path="res://NotificationPopup.gd" id="1_0rncg"]

[node name="NotificationPopup" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 316.0
offset_right = 1503.0
offset_bottom = 725.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 300
text = "KUKU!!"
script = ExtResource("1_0rncg")

[node name="DisplayTimer" type="Timer" parent="."]
